# UnrealAI

./: .claude.md  .gitignore  .mcp.json  claude_mcp_config.json  pyproject.toml  watch.py
.claude/: settings.json
docs/superpowers/plans/: 2026-03-29-unreal-ai-mcp.md
docs/superpowers/specs/: 2026-03-29-unreal-ai-mcp-design.md
mcp_server/: client.py  server.py
mcp_server/tools/: __init__.py  animation.py  behavior_trees.py  blueprints.py  console_commands.py  materials.py  python_execution.py  scene.py  user_widgets.py
tests/mcp_server/: test_blueprints.py  test_client.py  test_materials.py  test_scene.py  test_server.py
tests/ue5_plugin/: conftest.py  test_handlers_animation.py  test_handlers_behavior_trees.py  test_handlers_blueprints.py  test_handlers_materials.py  test_handlers_scene.py  test_handlers_user_widgets.py  test_server.py
ue5_plugin/UnrealAI/: UnrealAI.uplugin
ue5_plugin/UnrealAI/Content/Python/: init_unreal.py  routes.py  server.py
ue5_plugin/UnrealAI/Content/Python/handlers/: animation.py  behavior_trees.py  blueprints.py  console.py  debug.py  materials.py  python_exec.py  scene.py  user_widgets.py
ue5_plugin/UnrealAI/Source/UnrealAIBFL/: UnrealAIBFL.Build.cs
ue5_plugin/UnrealAI/Source/UnrealAIBFL/Private/: UnrealAIBFL.cpp  UnrealAIGraphLibrary.cpp
ue5_plugin/UnrealAI/Source/UnrealAIBFL/Public/: UnrealAIBFL.h  UnrealAIGraphLibrary.h
