[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unreal-ai-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
unreal-ai-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "ue5_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
